tests/rosetta/out/CS/abelian-sandpile-model.cs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:29:12Z
using System;
using System.Collections.Generic;

class Program
{
    static List<List<int>> newPile(int d)
    {
        List<List<int>> b = new List<List<int>>();
        int y = 0;
        while (y < d)
        {
            List<int> row = new List<int>();
            int x = 0;
            while (x < d)
            {
                row = new List<int>(row) { 0 };
                x = (x + 1);
            }
            b = new List<List<int>>(b) { row };
            y = (y + 1);
        }
        return b;
    }

    static List<List<int>> handlePile(List<List<int>> pile, int x, int y)
    {
        if (_indexList(_indexList(pile, y), x) >= 4)
        {
            pile[y][x] = (_indexList(_indexList(pile, y), x) - 4);
            if (y > 0)
            {
                pile[(y - 1)][x] = (_indexList(_indexList(pile, (y - 1)), x) + 1);
                if (_indexList(_indexList(pile, (y - 1)), x) >= 4)
                {
                    pile = handlePile(pile, x, (y - 1));
                }
            }
            if (x > 0)
            {
                pile[y][(x - 1)] = (_indexList(_indexList(pile, y), (x - 1)) + 1);
                if (_indexList(_indexList(pile, y), (x - 1)) >= 4)
                {
                    pile = handlePile(pile, (x - 1), y);
                }
            }
            if (y < (dim - 1))
            {
                pile[(y + 1)][x] = (_indexList(_indexList(pile, (y + 1)), x) + 1);
                if (_indexList(_indexList(pile, (y + 1)), x) >= 4)
                {
                    pile = handlePile(pile, x, (y + 1));
                }
            }
            if (x < (dim - 1))
            {
                pile[y][(x + 1)] = (_indexList(_indexList(pile, y), (x + 1)) + 1);
                if (_indexList(_indexList(pile, y), (x + 1)) >= 4)
                {
                    pile = handlePile(pile, (x + 1), y);
                }
            }
            pile = handlePile(pile, x, y);
        }
        return pile;
    }

    static void drawPile(List<List<int>> pile, int d)
    {
        List<string> chars = new List<string> { " ", "░", "▓", "█" };
        int row = 0;
        while (row < d)
        {
            string line = "";
            int col = 0;
            while (col < d)
            {
                var v = _indexList(_indexList(pile, row), col);
                if (v > 3)
                {
                    v = 3;
                }
                line = (line + _indexList(chars, v));
                col = (col + 1);
            }
            Console.WriteLine(line);
            row = (row + 1);
        }
    }

    static void main()
    {
        List<List<int>> pile = newPile(16);
        int hdim = 7;
        pile[hdim][hdim] = 16;
        pile = handlePile(pile, hdim, hdim);
        drawPile(pile, 16);
    }

    static void Main()
    {
        int dim = 16;
        main();
    }
    static dynamic _indexList(dynamic l, long i)
    {
        var list = l as System.Collections.IList;
        if (list == null) throw new Exception("index() expects list");
        if (i < 0) i += list.Count;
        if (i < 0 || i >= list.Count) throw new Exception("index out of range");
        return list[(int)i];
    }

}
